--- a/themes/Home/Product_chanpinzhongxin.html
+++ b/themes/Home/Product_chanpinzhongxin.html
@@ -179,7 +179,7 @@
                         <ul>
                             <notempty name="vo.sonlist">
                                 <volist name="vo.sonlist" id="vv">
-                                    <li><a href="" title="会跳舞的LED显示屏制作" target="_blank"><img width="224" height="164" src="{$vv.thumb}" alt="会跳舞的LED显示屏制作效果图片" /><span class="pro_dName">{$vv.title}</span></a></li>
+                                    <li><a href="index.php?g=home&m=Product&a=detail&id={$vv.id}" title="会跳舞的LED显示屏制作" target="_blank"><img width="224" height="164" src="{$vv.thumb}" alt="会跳舞的LED显示屏制作效果图片" /><span class="pro_dName">{$vv.title}</span></a></li>
                                 </volist>
                             </notempty>
                         </ul>
